--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -385,6 +385,51 @@
 
     </script>
 
+    <script>
+
+        function share(text) {
+
+            if (navigator.share) {
+                navigator.share({
+                    title: 'WebShare API Demo',
+                    url: text
+                }).then(() => {
+                    console.log('Thanks for sharing!');
+                })
+                    .catch(console.error);
+            } else {
+                copy(text, 'لینک اشتراک کپی شد');
+            }
+
+        }
+
+        function copy(text, message) {
+            var textArea = document.createElement("textarea");
+            textArea.value = text;
+
+            // Avoid scrolling to bottom
+            textArea.style.top = "0";
+            textArea.style.left = "0";
+            textArea.style.position = "fixed";
+
+            document.body.appendChild(textArea);
+            textArea.focus();
+            textArea.select();
+
+            try {
+                var successful = document.execCommand('copy');
+            } catch (err) {
+            }
+
+            document.body.removeChild(textArea);
+
+            if (message === undefined || message === null) return;
+
+            UIkit.notification(message);
+        }
+
+    </script>
+
     @RenderSection("Scripts", false)
 
 </body>
