--- a/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Profile/Index.cshtml
@@ -32,15 +32,64 @@
         </div>
         <dl class="datalist uk-margin-small-right flex-auto">
             <dt>نام و نام خانوادگی</dt>
-            <dd>@Model.Name</dd>
+            <dd>
+                @if (string.IsNullOrEmpty(Model.Name))
+                {
+                    <a href="#ModalChangeName" class="link-text" uk-toggle>نام و نام خانوادگی</a>
+                }
+                else
+                {
+                    <span>@Model.Name</span>
+                }
+            </dd>
             <dt>شماره تلفن</dt>
             <dd>@Model.TellNo</dd>
         </dl>
     </div>
 </div>
 
-@section Scripts{
+<div class="procedure mat-card">
+    <div class="circles">
+        <div class="step done">
+            <div class="circle"></div>
+            <span class="name">آماده سازی</span>
+        </div>
+        <div class="step done">
+            <div class="circle"></div>
+            <span class="name">در حال انتقال</span>
+        </div>
+        <div class="step done">
+            <div class="circle"></div>
+            <span class="name">تحویل داده شد</span>
+        </div>
+    </div>
+</div>
 
+<div id="ModalChangeName" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body">
+        <form>
+            <h3 class="uk-margin-remove-bottom">
+                تایین نام
+            </h3>
+
+            <p class="uk-margin-small-top text-2">
+                برای ثبت سفارش و استفاده از برخی امکانات سایت مانند تالار گفتگو، پشتیبانی و... لازم است نام و نام خانوادگی خود را وارد نمایید.
+            </p>
+
+            <div class="fg-col">
+                <label class="fg-label">نام و نام خانوادگی</label>
+                <input type="text" class="entry" value="" />
+                <span class="text-danger"></span>
+            </div>
+
+            <div class="action uk-margin-medium-top">
+                <button class="btn btn-primary">تایید</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+@section Scripts{
 
     <script>
         //showImage();
@@ -84,4 +133,5 @@
             $("#overlay").fadeOut(300);
         }
     </script>
+
 }
