--- a/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Slider/Components/Create.cshtml
@@ -34,7 +34,7 @@
         <label class="mt-2">تصویر اسلایدر</label>
         <br />
         <div class="custom-file col-md-7">
-            <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" required asp-for="ImageUrl">
+            <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" required asp-for="ImageUrl" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
     </div>
@@ -45,3 +45,9 @@
 
 <script src="~/Validate/jquery.validate.min.js"></script>
 <script src="~/Validate/jquery.validate.unobtrusive.js"></script>
+<script> 
+    function inputChanged(sender) {
+        var fileName = sender.files[0].name;
+        sender.parentElement.querySelector('.custom-file-label').innerHTML = fileName;
+    }
+</script>
