admin: store view page

--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -134,6 +134,14 @@
                                 <span class="title">ارائه</span>
                             </a>
                         </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/Store" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="storefront"></i>
+                                </span>
+                                <span class="title">فروشگاه</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
