--- a/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblBlog>
+@using GhasreMobile.Utilities;
 @{
     ViewData["Title"] = "پست ها";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -38,28 +39,31 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>58954</td>
-                                <td>پست1</td>
-                                <td>زمان...</td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                        <a id="Edit" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
-                                    </span>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
-                                        <a onclick="" class="text-danger" uk-icon="trash"></a>
-                                    </span>
-                                </td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.BlogId</td>
+                                    <td>@item.Title</td>
+                                    <td>@item.DateCreated.AllToShamsi()</td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                            <a onclick="Edit(@item.BlogId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                        </span>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
+                                            <a onclick="Remove(@item.BlogId)" class="text-danger" uk-icon="trash"></a>
+                                        </span>
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
             </div>
-            @*<div class="card-footer bg-white">
-                    <nav aria-label="Page navigation example">
-                        @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
-                    </nav>
-                </div>*@
+            <div class="card-footer bg-white">
+                <nav aria-label="Page navigation example">
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
+                </nav>
+            </div>
         </div>
     </div>
 </div>
@@ -72,10 +76,22 @@
             });
         });
 
-        $("#Edit").click(function () {
-            $.get("/Admin/Blog/Edit", function (result) {
+        function Edit(id) {
+            $.get("/Admin/Blog/Edit/" + id, function (result) {
                 $(".modal-content").html(result);
             });
-        });
+        }
+
+        function Remove(id) {
+            $.post("/Admin/Blog/Delete/" + id, function () {
+                window.location.reload();
+            });
+        }
+
+        function BtnSearch() {
+            var data = $("#SearchInput").val();
+            window.location.href = "/Admin/Blog?page=1&Search=" + data;
+        }
+
     </script>
-    }
+}
