--- a/GhasreMobile/Areas/Admin/Views/Blog/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Components/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblBlog
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         ویرایش پست
     </h6>
@@ -6,36 +7,44 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form action="">
+<form asp-action="Edit" asp-controller="Blog" asp-area="Admin" method="post" enctype="multipart/form-data">
+    <input type="hidden" asp-for="BlogId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>عنوان</label>
-                <input class="form-control" placeholder="مثال: پست 1">
+                <input asp-for="Title" class="form-control" placeholder="مثال: پست 1">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>توضیحات </label>
-                <input class="form-control" placeholder="توضیحات پست">
+                <input asp-for="Description" class="form-control" placeholder="توضیحات پست">
             </div>
         </div>
         <label class="mt-2">تصویر پست</label>
         <br />
         <div class="custom-file col-md-7">
-            <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
-            <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
+            <input asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
+            <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">@Model.MainImage</label>
         </div>
         <div class="form-row mt-3">
             <div class="form-group col-md-7">
                 <label>کلمات کلیدی</label>
-                <input type="text" value="" data-role="tagsinput" id="tags" class="form-control" placeholder="کلمات کلیدی">
+                <input type="text" value="
+
+                                       @foreach (var item in Model.TblBlogKeywordRel)
+                                        {
+                                        @item.Keyword.Name@:,
+                                        }
+
+                                       " data-role="tagsinput" id="tags" class="form-control">
             </div>
         </div>
 
         <label>متن پست </label>
         <div>
-            <textarea id="DescriptionLongHtml" class="textarea-fix-height-300"></textarea>
+            <textarea asp-for="BodyHtml" id="DescriptionLongHtml" class="textarea-fix-height-300"></textarea>
         </div>
     </div>
     <div class="modal-footer justify-content-end">
