--- a/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿@model DataLayer.Models.TblStore
+<div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         افزودن فروشگاه
     </h6>
@@ -6,46 +7,56 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form action="Create">
+<form asp-action="Create" asp-controller="Store" asp-area="Admin" method="post" enctype="multipart/form-data"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label>نام فروشگاه</label>
-                <input class="form-control form-control-sm" placeholder="مثال: فروشگاه 1">
+                <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال: فروشگاه 1">
             </div>
             <div class="form-group col-md-3">
                 <label>شماره تماس</label>
-                <input type="tel" class="form-control form-control-sm" name="" placeholder="مثال: ...0914">
+                <input asp-for="TellNo" type="tel" class="form-control form-control-sm" placeholder="مثال: ...0914">
             </div>
         </div>
         <label class="mt-2">تصویر اصلی</label>
         <br />
         <div class="custom-file col-md-7">
-            <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
+            <input asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
         <hr />
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>توضیحات</label>
-                <textarea class="textarea-fix-height-120" placeholder=" متن توضیحات... "></textarea>
+                <textarea asp-for="Body" class="textarea-fix-height-120" placeholder=" متن توضیحات... "></textarea>
             </div>
         </div>
         <hr />
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>آدرس</label>
-                <input class="form-control form-control-sm" placeholder="مثال: خیابان امام...">
+                <input asp-for="Address" class="form-control form-control-sm" placeholder="مثال: خیابان امام...">
             </div>
         </div>
         <label>لوکیشن فروشگاه</label>
         <div id="map" style="height:220px;"></div>
     </div>
+    <input type="hidden" asp-for="Lat" />
+    <input type="hidden" asp-for="Lon" />
     <div class="modal-footer justify-content-end">
         <button type="submit" class="btn btn-success btn-sm text-white">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
     </div>
-    
 </form>
+
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
+
 <script>
     function inputChanged(sender) {
         var fileName = sender.files[0].name;
@@ -74,12 +85,12 @@
 
         var iconSetting = L.Icon.extend({
             options: {
-                iconSize: [20, 29],
-                iconAnchor: [10, 29]
+                iconSize: [32, 32],
+                iconAnchor: [16, -8]
             }
         });
 
-        var customIcon = new iconSetting({ iconUrl: '/purple-location.png' });
+        var customIcon = new iconSetting({ iconUrl: '/marker.svg' });
         //Add a marker to show where you clicked.
         $("#Lat").val(lat.toString());
         $("#Lon").val(lon.toString());
