update commnet in products

--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -182,7 +182,7 @@
 </div>
 
 
-@*@await Component.InvokeAsync("SenedCommentView")*@
+@await Component.InvokeAsync("SenedCommentView")
 
 @if (Model.TblProductCommentRel.Any())
 {
