--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -142,6 +142,14 @@
                                 <span class="title">فروشگاه</span>
                             </a>
                         </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/Discount" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="pricetags-outline"></i>
+                                </span>
+                                <span class="title">تخفیفات</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
