admin-ticket index page view

--- a/GhasreMobile/wwwroot/AdminStaticFile/style.css
+++ b/GhasreMobile/wwwroot/AdminStaticFile/style.css
@@ -1802,6 +1802,11 @@ table.hot-download td {
     resize:none;
     width:100%;
 }
+.textarea-fix-height-90 {
+    max-height: 90px !important;
+    min-height:90px !important;
+    resize: none;
+}
 .textarea-fix-height-300 {
     max-height: 300px !important;
     min-height: 300px !important;
