--- a/GhasreMobile/Areas/Admin/Views/Discount/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Discount/Components/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model DataLayer.Models.TblDiscount
 <div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         ویرایش کد تخفیف
@@ -7,27 +7,27 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form>
+<form asp-action="Edit" asp-controller="Discount" asp-area="Admin"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-6 col-lg-3">
                 <label>نام</label>
-                <input class="form-control form-control-sm" placeholder="مثال: noroz1400">
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-6 col-lg-3">
-                <label>چند روز</label>
-                <input type="number" class="form-control form-control-sm" placeholder="مثال: 2">
+                <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال: noroz1400">
                 <span class="text-danger"></span>
             </div>
             <div class="form-group col-md-6 col-lg-3">
                 <label>درصد تخفیف</label>
-                <input type="number" class="form-control form-control-sm" placeholder="مثال: 30">
+                <input asp-for="Discount" type="number" class="form-control form-control-sm" placeholder="مثال: 30">
                 <span class="text-danger"></span>
             </div>
             <div class="form-group col-md-6 col-lg-3">
                 <label>دفعات استفاده</label>
-                <input type="number" class="form-control form-control-sm" placeholder="مثال: 10">
+                <input asp-for="Count" type="number" class="form-control form-control-sm" placeholder="مثال: 10">
                 <span class="text-danger"></span>
             </div>
         </div>
@@ -36,3 +36,6 @@
         <button type="submit" class="btn btn-success btn-sm text-white">ویرایش<span class="icon-holder uk-margin-small-right" uk-icon="create-outline"></span></button>
     </div>
 </form>
+
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
