--- a/GhasreMobile/Areas/Admin/Views/Discount/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Discount/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblDiscount>
 @{
     ViewData["Title"] = "تخفیفات";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -28,17 +28,20 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>name90</td>
-                                <td>1397/12/19</td>
-                                <td>30%</td>
-                                <td>10</td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                        <a onclick="Edit()" id="Edit" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.Name</td>
+                                    <td>@item.ValidTill</td>
+                                    <td>@item.Discount%</td>
+                                    <td>10</td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                            <a onclick="Edit(@item.DiscountId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                        </span>
+                                    </td>
+                                </tr>
+                            }
 
                         </tbody>
                     </table>
@@ -47,7 +50,7 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @*@await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
